# dartsnut_emulator

./: .env.example  .gitignore  .gitmodules  README.md  emulator.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirement.txt  requirements.txt
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
0/: conf.json  main.py
1/: conf.json  main.py
2/: conf.json  main.py
3/: conf.json  main.py
apps/desktop/: .env.macos-notarize.example  DEPLOY_TO_MACHINE.md  LIVE_UPDATES.md  agentEventBatcher.ts  agentEventConsole.ts  appUpdater.ts  assetManager.ts  communityAuth.ts  communityClient.test.ts  communityClient.ts  dartsnutLlmConfig.test.ts  dartsnutLlmConfig.ts  dartsnutSourceHeader.ts  deployMachine.ts  deployMachineScripts.test.ts  deployMachineScripts.ts  devOnlyLog.ts  entitlements.mac.plist  googleOAuth.test.js  googleOAuth.ts  index.html  main.ts  package.json  preload.ts  publishPackage.test.ts  publishPackage.ts  pythonEnvSanitize.ts  pythonRuntime.ts  pythonRuntimeDownloader.ts  pythonRuntimeEnv.test.ts  quitFlow.test.ts  quitFlow.ts  splashWindow.ts  tsconfig.electron.json  tsconfig.json  vite.config.ts  windowState.test.ts  windowState.ts
dartsnut/: __init__.py  dartsnut.py
docs/: PYTHON_RUNTIME.md  _config.yml  index.md
example/simple_clock_128_128/: conf.json  (+1 more)
pydartsnut/: pydartsnut.py  pyproject.toml
scripts/: asset_preprocess.py  build_bundled_python.mjs  check_agent_plugin.mjs  export_agent_plugin.mjs  generate_packaged_env.mjs  generate_packaged_env.test.js  setup_python_env.mjs
(+111 files in other folders)
