# pyproject.toml
    [project]
    name = "pydartsnut"
    version = "0.1.0"
    description = "dartsnut python package"
    readme = "README.md"
    requires-python = ">=3.1"
    dependencies = [
        # List any dependencies your package needs here
        # "requests",
    ]

    [build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"

    [project.urls]
    "Homepage" = "https://github.com/your_username/my_package"
    "Bug Tracker" = "https://github.com/your_username/my_package/issues"